add mailchimp embeded form.

--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Delani Studio</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.1/css/lightbox.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
-    <div class="jumbotron jumbotron-fluid">
-        <div class="container">
+    <section class="jumbotron jumbotron-fluid">
+        <div class="container text-center text-white">
             <img src="assets/logo/logo.png" alt="logo" class="mx-auto d-block">
             <h1 class="display-3">Welcome</h1>
             <p class="lead">TO DELANI STUDIO</p>
@@ -20,10 +24,212 @@
             <a href="#about"><img src="assets/mouse_click.png" class="mx-auto d-block click" alt="mouse click"
                     id="bounce"></a>
         </div>
-    </div>
+    </section>
+
+    <section id="about">
+        <div class="container mx-auto text-center">
+            <h3 class="p-4">ABOUT US</h3>
+            <p>When you work with us, you are a part of a team of committed collaborators. All
+                aspects of our software development process are integrated, interactive and agile
+            </p>
+            <p>Our approach unifies design, development and product management to create
+                exceptional
+                products.</p>
+            <p>We start each project by understanding your business goals, the user's needs
+                and the product requirements.<br> Then we help them translate into effective
+                and elegant solutions.
+            </p>
+        </div>
+    </section>
+
+    <section id="services">
+        <div class="containter mx-auto text-center text-white m-4">
+            <h3 class="p-4">SERVICES</h3>
+            <p>Before we sign a contract or write a line of code our team will spend the necessary tome needed to
+                understand
+                your
+                product vision</p>
+            <p>The outcome of this scoping session is proposal or high-level statement of work.</p>
+            <p>Based on your requirements, we can provide a complete offering or just the pieces you need.</p>
+        </div>
+    </section>
+
+    <section id="skills">
+        <div class="container mx-auto text-center">
+            <h3 class="p-4">WHAT WE DO </h3>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="card" style="width: 17rem;" data-toggle="collapse" href="#design" role="button"
+                        aria-expanded="false" aria-controls="design">
+                        <img src="assets/services_icons/design_icon.png" class="card-img-top" alt="Design">
+                        <div class="card-body">
+                            <h4>DESIGN</h4>
+                            <div class="collapse" id="design">
+                                <p class="card-text">Our design practice offers a full range of services including brand
+                                    strategy, interaction and visual design and user experience testing. Throughout your
+                                    project, our designers create and implement visual design and workflows, solicit
+                                    user feedback and work with you to make sure what gets built is what is needed.</p>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card" style="width: 17rem;" data-toggle="collapse" href="#development" role="button"
+                        aria-expanded="false" aria-controls="development">
+                        <img src="assets/services_icons/dev_icon.png" class="card-img-top" alt="development">
+                        <div class="card-body">
+                            <h4>DEVELOPMENT</h4>
+                            <div class="collapse" id="development">
+                                <p class="card-text">All engineers are fluent in the latest enterprise, mobile and web
+                                    development technologies. They collaborate with your team to write, and improve code
+                                    on a daily basis, using proven practices such as test-driven development and pair
+                                    programming.</p>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card" style="width: 17rem;" data-toggle="collapse" href="#product" role="button"
+                        aria-expanded="false" aria-controls="product">
+                        <img src="assets/services_icons/design_icon.png" class="card-img-top" alt="product design">
+                        <div class="card-body">
+                            <h4>PRODUCT DESIGN</h4>
+                            <div class="collapse" id="product">
+                                <p class="card-text">Planning and development is iterative. Because we are constantly
+                                    coding and testing, the products we build are always ready to go live. This
+                                    iterative process allows for changes as business requirements evolve</p>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="portfolio" class="mt-4">
+        <div class="container mx-auto text-center">
+            <h3 class="p-4">PORTFOLIO</h3>
+            <div class="row">
+                <div class="col-lg-3 col-md-4 col-6">
+                    <a href="assets/portfolio/work1.jpg" class="d-block mb-4 h-100" data-title="Delani Studio"
+                        data-lightbox="photos">
+                        <img class="img-fluid img-thumbnail" src="assets/portfolio/work1.jpg" alt="">
+                    </a>
+                </div>
+                <div class="col-lg-3 col-md-4 col-6">
+                    <a href="assets/portfolio/work2.jpg" class="d-block mb-4 h-100" data-title="Delani Studio"
+                        data-lightbox="photos">
+                        <img class="img-fluid img-thumbnail" src="assets/portfolio/work2.jpg" alt="">
+                    </a>
+                </div>
+                <div class="col-lg-3 col-md-4 col-6">
+                    <a href="assets/portfolio/work3.jpg" class="d-block mb-4 h-100" data-title="Delani Studio"
+                        data-lightbox="photos">
+                        <img class="img-fluid img-thumbnail" src="assets/portfolio/work3.jpg" alt="">
+                    </a>
+                </div>
+                <div class="col-lg-3 col-md-4 col-6">
+                    <a href="assets/portfolio/work4.jpg" class="d-block mb-4 h-100" data-title="Delani Studio"
+                        data-lightbox="photos">
+                        <img class="img-fluid img-thumbnail" src="assets/portfolio/work4.jpg" alt="">
+                    </a>
+                </div>
+                <div class="col-lg-3 col-md-4 col-6">
+                    <a href="assets/portfolio/work5.jpg" class="d-block mb-4 h-100" data-title="Delani Studio"
+                        data-lightbox="photos">
+                        <img class="img-fluid img-thumbnail" src="assets/portfolio/work5.jpg" alt="">
+                    </a>
+                </div>
+                <div class="col-lg-3 col-md-4 col-6">
+                    <a href="assets/portfolio/work6.jpg" class="d-block mb-4 h-100" data-title="Delani Studio"
+                        data-lightbox="photos">
+                        <img class="img-fluid img-thumbnail" src="assets/portfolio/work6.jpg" alt="">
+                    </a>
+                </div>
+                <div class="col-lg-3 col-md-4 col-6">
+                    <a href="assets/portfolio/work7.jpg" class="d-block mb-4 h-100" data-title="Delani Studio"
+                        data-lightbox="photos">
+                        <img class="img-fluid img-thumbnail" src="assets/portfolio/work7.jpg" alt="">
+                    </a>
+                </div>
+                <div class="col-lg-3 col-md-4 col-6">
+                    <a href="assets/portfolio/work8.jpg" class="d-block mb-4 h-100" data-title="Delani Studio"
+                        data-lightbox="photos">
+                        <img class="img-fluid img-thumbnail" src="assets/portfolio/work8.jpg" alt="">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="contact">
+        <div class="container mx-auto text-center text-white mt-4">
+            <h3 class="p-4">CONTACT US</h3>
+            <form
+                action="https://ammly.us20.list-manage.com/subscribe/post-json?u=1b1f66bf8ab57ab71e9f5e0be&amp;id=cbcf7e3099"
+                method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
+                novalidate>
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="md-form m-4">
+                            <input type="text" value="" id="mce-NAME" name="NAME" class="required form-control"
+                                placeholder="Name...">
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="md-form m-4">
+                            <input type="email" value="" name="EMAIL" class="required email form-control" id="mce-EMAIL"
+                                placeholder="Email...">
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12 md-form">
+                        <textarea type="text" value="" id="mce-MESSAGE" name="MESSAGE" cols="100" rows="10"
+                            class="required form-control md-textarea m-4" placeholder="Your message..."></textarea>
+                    </div>
+                </div>
+                <div id="mce-responses" class="clear">
+                    <div class="response" id="mce-error-response" style="display:none"></div>
+                    <div class="response" id="mce-success-response" style="display:none"></div>
+                </div>
+                <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text"
+                        name="b_1b1f66bf8ab57ab71e9f5e0be_cbcf7e3099" tabindex="-1" value=""></div>
+                <div class="row">
+                    <div class="col-md-6 mx-auto">
+                        <button type="submit" class="form-control btn btn-light button" id="mc-embedded-subscribe"
+                            value="Subscribe" name="subscribe" id="mc-embedded-subscribe">Submit</button>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </section>
+
+    <footer id="footer">
+        <div class="social mx-auto text-center m-4">
+            <div class="col-md-2"></div>
+            <img src="assets/social_icons/twitter.png">
+            <img src="assets/social_icons/dribble.png">
+            <img src="assets/social_icons/facebook.png">
+            <img src="assets/social_icons/g_plus.png">
+            <img src="assets/social_icons/skype.png">
+            <img src="assets/social_icons/stumble_upon.png">
+            <img src="assets/social_icons/behance.png">
+            <img src="assets/social_icons/pinterest.png">
+            <img src="assets/social_icons/flickr.png">
+        </div>
+        <div class="mx-auto text-center m-2">
+            <p>DELANI STUDIO.<br>@2019</p>
+        </div>
+    </footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.1/js/lightbox.min.js"></script>
+    <script src="js/index.js"></script>
 </body>
 
 </html>
