add LINCENCE and update readme

--- a/index.html
+++ b/index.html
@@ -168,10 +168,9 @@
     <section id="contact">
         <div class="container mx-auto text-center text-white mt-4">
             <h3 class="p-4">CONTACT US</h3>
-            <form
-                action="https://ammly.us20.list-manage.com/subscribe/post-json?u=1b1f66bf8ab57ab71e9f5e0be&amp;id=cbcf7e3099"
-                method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
-                novalidate>
+            <form id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
+                action="https://ammly.us20.list-manage.com/subscribe/post?u=1b1f66bf8ab57ab71e9f5e0be&amp;id=cbcf7e3099"
+                method="POST">
                 <div class="row">
                     <div class="col-md-6">
                         <div class="md-form m-4">
@@ -200,8 +199,8 @@
                         name="b_1b1f66bf8ab57ab71e9f5e0be_cbcf7e3099" tabindex="-1" value=""></div>
                 <div class="row">
                     <div class="col-md-6 mx-auto">
-                        <button type="submit" class="form-control btn btn-light button" id="mc-embedded-subscribe"
-                            value="Subscribe" name="subscribe" id="mc-embedded-subscribe">Submit</button>
+                        <button type="submit" class="form-control btn btn-light button" value="Subscribe"
+                            name="subscribe" id="mc-embedded-subscribe">Submit</button>
                     </div>
                 </div>
             </form>
